--- a/client/package.json
+++ b/client/package.json
@@ -16,11 +16,14 @@
     "@stripe/stripe-react-native": "^0.35.0",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
+    "expo-file-system": "~15.4.5",
+    "expo-print": "~12.4.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-paper": "^5.11.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
