--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "react-native-html-to-pdf": "^0.12.0"
+    "react-native-html-to-pdf": "^0.12.0",
+    "react-native": "0.71.0"
   }
 }
