--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "expo-print": "^14.0.3",
+    "expo-sharing": "^13.0.1",
     "react-native-html-to-pdf": "^0.12.0"
   }
 }
